fix:scrollbar visibility

--- a/app/globals.css
+++ b/app/globals.css
@@ -30,6 +30,26 @@
 
 body {
   background-color: black;
+  &::-webkit-scrollbar {
+    width: 0px; /* Width of scrollbar */
+  }
+  overflow-y: scroll;
+  scrollbar-width: thin; /* Firefox */
+  scrollbar-color: var(--themeTextColor) transparent; /* Firefox */
+  &::-webkit-scrollbar {
+    height: 4px;
+  }
+  -ms-overflow-style: none; /* IE 10+ */
+  &::-webkit-scrollbar {
+    width: 4px; /* Width of scrollbar */
+  }
+  &::-webkit-scrollbar-track {
+    background-color: transparent; /* Track color */
+  }
+  &::-webkit-scrollbar-thumb {
+    background-color: var(--themeTextColor); /* Thumb color */
+    border-radius: 8px; /* Rounded corners */
+  }
 }
 
 .container {
